# data-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  start-platform.sh  stop-platform.sh
.github/workflows/: ci.yml
airflow/dags/: openbrewerydb_aws_dag.py  openbrewerydb_dag.py
airflow/dags/include/scripts/: dag_base.py
airflow/include/scripts/: aws_dag_base.py  dag_base.py
data_pipeline/: etl.py
data_pipeline/shared/: logger.py
data_pipeline/strategies/: __init__.py  registry.py
data_pipeline/strategies/bronze/: extract.py  load.py  quality.py  transform.py
data_pipeline/strategies/gold/: extract.py  load.py  quality.py  transform.py
data_pipeline/strategies/interfaces/: __init__.py  quality.py  strategy.py
data_pipeline/strategies/silver/: extract.py  load.py  quality.py  transform.py
infra/airflow/: airflow.Dockerfile  airflow.env  requirements.txt
infra/bronze_container/: bronze.Dockerfile
infra/hive/: hive.Dockerfile
infra/hive/conf/: hive-site.xml
infra/spark/: spark-defaults.conf  spark.Dockerfile
infra/terraform/aws/: README.md  athena.tf  ecs.tf  glue.tf  iam.tf  main.tf  network.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
infra/trino/catalog/: lakehouse.properties
jobs/: main.py
scripts/: bronze.py  ci.sh  main.py  register_table_trino.sh
tests/: conftest.py  stubs.py  test_bronze_strategies.py  test_gold_strategies.py  test_registry.py  test_silver_strategies.py
