[project]
name = "data-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Cunha"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pyspark (==3.5.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "backoff (>=2.2.1,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "boto3 (>=1.42.54,<2.0.0)",
    "pydeequ (==1.5.0)",
    "delta-spark (==3.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.2"
pytest = "^9.0.2"
coverage = "^7.13.4"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E501", "E", "F", "I"]
ignore = ["D100"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"
